Customize the senacor code